--- a/unity-renderer/Assets/package.json
+++ b/unity-renderer/Assets/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "com.decentraland.unity-renderer",
+  "name": "com.beland.unity-renderer",
   "version": "1.0.0",
   "displayName": "BLD Unity Renderer",
-  "description": "Decentraland Unity Renderer Package",
+  "description": "Beland Unity Renderer Package",
   "unity": "2020.3",
   "unityRelease": "0f1",
   "gitDependencies": {
     "com.coffee.ui-particle": "https://github.com/mob-sakai/ParticleEffectForUGUI.git",
-    "net.tnrd.nsubstitute": "https://github.com/decentraland/Unity3D-NSubstitute.git"
+    "net.tnrd.nsubstitute": "https://github.com/belandproject/Unity3D-NSubstitute.git"
   },
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
@@ -61,12 +61,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/decentraland/unity-renderer.git?path=desktop#desktop"
+    "url": "git+https://github.com/belandproject/unity-renderer.git?path=desktop#desktop"
   },
   "keywords": [],
   "author": {
-    "name": "Decentraland",
-    "email": "contact@decentraland.org",
-    "url": "https://www.decentraland.org"
+    "name": "Beland",
+    "email": "contact@beland.io",
+    "url": "https://www.beland.io"
   }
 }
